# ZephyrTemplate

./: .gitignore  CMakeLists.txt  ble_client.ipynb  ble_client.py  prj.conf  tools.ipynb
boards/: biopotential.overlay
drivers/bme280/zephyr/: CMakeLists.txt  Kconfig
drivers/max30003/zephyr/: CMakeLists.txt  Kconfig  module.yml
drivers/max30003/zephyr/include/: max30003.h
drivers/max30003/zephyr/src/: max30003.c
dts/bindings/: dsy,max30003.yaml
src/: ble.c  ble.h  main.c  state.c  state.h
